--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
-{
-  "name": "dk-discord-ai-bot",
-  "version": "1.0.0",
-  "description": "Bot selfbot com IA de persuasão disfarçada, controlado via terminal, por DK 🥷",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "painel": "node painel.js"
-  },
-  "keywords": ["discord", "selfbot", "ia", "openrouter", "gemini", "persuasao"],
-  "author": "DK 🥷",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.6.0",
-    "discord.js-selfbot-v13": "^1.9.3"
-  }
+"dependencies": {
+  "axios": "^1.6.0",
+  "djs-selfbot": "^13.1.2",
+  "discord.js": "^13.12.0",
+  "readline": "^1.3.0",
+  "form-data": "^4.0.0",
+  "figlet": "^1.6.0",
+  "gradient-string": "^2.0.1"
 }
